# resume-markdown-mcp

./: .mcp.json  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
src/resume_markdown/: __init__.py  __main__.py  _version.py  converter.py  server.py
