[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "resume-markdown-mcp"
dynamic = ["version"]
description = "MCP server for AI-assisted Markdown resume writing and PDF export"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Elon Shen", email = "ailenshen@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.0",
    "mcp>=1.27.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.urls]
Homepage = "https://github.com/ailenshen/resume-markdown-mcp"
Repository = "https://github.com/ailenshen/resume-markdown-mcp"
Issues = "https://github.com/ailenshen/resume-markdown-mcp/issues"

[project.scripts]
resume-markdown-mcp = "resume_markdown:mcp_main"
resume-markdown = "resume_markdown:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/resume_markdown/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/resume_markdown"]
